// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Flex Component correctly 1`] = `
<div
  className="sc-gZMcBi kiNSap"
/>
`;

exports[`renders the Flex Component correctly 2`] = `
<div
  className="sc-gZMcBi cUfjlP"
/>
`;

exports[`renders the Flex Component correctly 3`] = `
<div
  className="sc-gZMcBi lfyyBM"
/>
`;
